--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.container{
+  background-color:rgb(12, 12, 84);
+  color:rgb(188, 179, 179);
+  
+}
+.sub-container{
+  display:flex;
+  flex-direction: row;
+  margin-bottom:10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+
+  margin-left:-50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.logo{
+  border-radius: 54%;
+  width:50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.name{
+  display:inline;
+}
+h4{
+  margin-top: 11px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box{
+  padding:18px;
+  border:1px solid white;
 }
